--- a/css/transposh.css
+++ b/css/transposh.css
@@ -3,18 +3,12 @@
  * This css will be either lazy-loaded or become part of the .js file
  */
 
-/* this is now useless?
-.post .postbody .tr_img_, .attachment .tr_img_, .navigation .alignleft .tr_img_, .navigation .alignright .tr_img_,
-.tr_img_ {
-   border: 0px; 
-   margin: 0px;
-}*/
-
+/* using icon By Orange-kun - Own work, CC0, https://commons.wikimedia.org/w/index.php?curid=148777554 */
 .tr-icon {
-    background-image:url(../img/tr_imgs.png);
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xml:space='preserve' viewBox='0 0 32 32'%3E%3Cpath fill='%23E200FF' d='M26.6 16.9H24c-1 0-1.6.2-2.1.5s-.7.8-.7 1.5c0 1.5 1 2.2 2.8 2.2h2.6v-4.2zM28.3 0H3.8A3.8 3.8 0 0 0 0 3.8v24.4C0 30.4 1.7 32 3.8 32h24.5c2 0 3.7-1.7 3.7-3.8V3.9C32 1.6 30.3 0 28.3 0zm-8.6 5.9h4.1c2 0 2.8.7 2.8 2.5v1.3H28l-2.4 2.9-2.4-3h1.3V8.5c0-.4-.3-.7-.7-.7h-4V6zM8.3 3.2l.7-.4.5-.2a39.4 39.4 0 0 1 2 1.5c.2.1.2.2.2.4s0 .3-.2.4l-.7.5-.5.2a.5.5 0 0 1-.5-.3L8.3 4a.5.5 0 0 1-.2-.4c0-.2 0-.3.2-.4zm8.6 9.2a5 5 0 0 1-3.4 1.2c-.7 0-1.5-.1-2.3-.4a.9.9 0 0 1-.4-.3.8.8 0 0 1-.2-.5v-1c0-.2 0-.3.2-.4h.5l2 .3c.7 0 1.3-.1 1.7-.5.5-.4.7-.9.7-1.6 0-.5-.2-.9-.6-1.2-.4-.3-1-.5-1.7-.5-1.2 0-3 .6-5.5 1.7l.5 1.1a85 85 0 0 1 2.8 8c-.1.2-.3.3-.4.3l-1.4.3H9a48 48 0 0 0-2.7-7.5l-.4-1-.1-.1a69.8 69.8 0 0 0-3.2 1.3.6.6 0 0 1-.4-.3l-.6-1.2v-.5l.4-.3L3 9a31.6 31.6 0 0 0 1.7-.7 19.2 19.2 0 0 0-1.5-2.7.5.5 0 0 1-.1-.4c0-.2.1-.3.3-.3l1.2-.5a.7.7 0 0 1 .5 0c.2 0 .3.2.4.4l.5.8a51.3 51.3 0 0 1 1 1.8A39 39 0 0 1 10.6 6c1-.3 2-.5 2.8-.5a5 5 0 0 1 3.6 1c.9.8 1.3 1.7 1.3 2.8a4 4 0 0 1-1.3 3.1zm12.6 15.3a.6.6 0 0 1-.6.7h-1.5c-.2 0-.4 0-.5-.2a.6.6 0 0 1-.2-.5v-4.3H24l-3 4.4c-.2.4-.5.6-1 .6h-1.9c-.1 0-.2 0-.3-.2v-.4l3.4-4.8a5 5 0 0 1-2.1-1.5c-.5-.7-.8-1.6-.8-2.6 0-2.8 1.8-4.2 5.4-4.2h5c.3 0 .4 0 .6.2l.1.5v12.4z' style='stroke-width:.0938'/%3E%3C/svg%3E");
     height:12px;
     width:12px;
-    background-repeat:no-repeat;
+    background-size:contain;
     overflow:hidden;
     text-indent:-99999px;
     display:inline-block;
@@ -22,10 +16,10 @@
     box-shadow:none;
 }
 .tr-icon-yellow {
-    background-position:-12px 0;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xml:space='preserve' viewBox='0 0 32 32'%3E%3Cpath fill='%23FFB600' d='M26.6 16.9H24c-1 0-1.6.2-2.1.5s-.7.8-.7 1.5c0 1.5 1 2.2 2.8 2.2h2.6v-4.2zM28.3 0H3.8A3.8 3.8 0 0 0 0 3.8v24.4C0 30.4 1.7 32 3.8 32h24.5c2 0 3.7-1.7 3.7-3.8V3.9C32 1.6 30.3 0 28.3 0zm-8.6 5.9h4.1c2 0 2.8.7 2.8 2.5v1.3H28l-2.4 2.9-2.4-3h1.3V8.5c0-.4-.3-.7-.7-.7h-4V6zM8.3 3.2l.7-.4.5-.2a39.4 39.4 0 0 1 2 1.5c.2.1.2.2.2.4s0 .3-.2.4l-.7.5-.5.2a.5.5 0 0 1-.5-.3L8.3 4a.5.5 0 0 1-.2-.4c0-.2 0-.3.2-.4zm8.6 9.2a5 5 0 0 1-3.4 1.2c-.7 0-1.5-.1-2.3-.4a.9.9 0 0 1-.4-.3.8.8 0 0 1-.2-.5v-1c0-.2 0-.3.2-.4h.5l2 .3c.7 0 1.3-.1 1.7-.5.5-.4.7-.9.7-1.6 0-.5-.2-.9-.6-1.2-.4-.3-1-.5-1.7-.5-1.2 0-3 .6-5.5 1.7l.5 1.1a85 85 0 0 1 2.8 8c-.1.2-.3.3-.4.3l-1.4.3H9a48 48 0 0 0-2.7-7.5l-.4-1-.1-.1a69.8 69.8 0 0 0-3.2 1.3.6.6 0 0 1-.4-.3l-.6-1.2v-.5l.4-.3L3 9a31.6 31.6 0 0 0 1.7-.7 19.2 19.2 0 0 0-1.5-2.7.5.5 0 0 1-.1-.4c0-.2.1-.3.3-.3l1.2-.5a.7.7 0 0 1 .5 0c.2 0 .3.2.4.4l.5.8a51.3 51.3 0 0 1 1 1.8A39 39 0 0 1 10.6 6c1-.3 2-.5 2.8-.5a5 5 0 0 1 3.6 1c.9.8 1.3 1.7 1.3 2.8a4 4 0 0 1-1.3 3.1zm12.6 15.3a.6.6 0 0 1-.6.7h-1.5c-.2 0-.4 0-.5-.2a.6.6 0 0 1-.2-.5v-4.3H24l-3 4.4c-.2.4-.5.6-1 .6h-1.9c-.1 0-.2 0-.3-.2v-.4l3.4-4.8a5 5 0 0 1-2.1-1.5c-.5-.7-.8-1.6-.8-2.6 0-2.8 1.8-4.2 5.4-4.2h5c.3 0 .4 0 .6.2l.1.5v12.4z' style='stroke-width:.0938'/%3E%3C/svg%3E");/*    background-position:-12px 0;*/
 }
 .tr-icon-green {
-    background-position:-24px 0;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xml:space='preserve' viewBox='0 0 32 32'%3E%3Cpath fill='%23009933' d='M26.6 16.9H24c-1 0-1.6.2-2.1.5s-.7.8-.7 1.5c0 1.5 1 2.2 2.8 2.2h2.6v-4.2zM28.3 0H3.8A3.8 3.8 0 0 0 0 3.8v24.4C0 30.4 1.7 32 3.8 32h24.5c2 0 3.7-1.7 3.7-3.8V3.9C32 1.6 30.3 0 28.3 0zm-8.6 5.9h4.1c2 0 2.8.7 2.8 2.5v1.3H28l-2.4 2.9-2.4-3h1.3V8.5c0-.4-.3-.7-.7-.7h-4V6zM8.3 3.2l.7-.4.5-.2a39.4 39.4 0 0 1 2 1.5c.2.1.2.2.2.4s0 .3-.2.4l-.7.5-.5.2a.5.5 0 0 1-.5-.3L8.3 4a.5.5 0 0 1-.2-.4c0-.2 0-.3.2-.4zm8.6 9.2a5 5 0 0 1-3.4 1.2c-.7 0-1.5-.1-2.3-.4a.9.9 0 0 1-.4-.3.8.8 0 0 1-.2-.5v-1c0-.2 0-.3.2-.4h.5l2 .3c.7 0 1.3-.1 1.7-.5.5-.4.7-.9.7-1.6 0-.5-.2-.9-.6-1.2-.4-.3-1-.5-1.7-.5-1.2 0-3 .6-5.5 1.7l.5 1.1a85 85 0 0 1 2.8 8c-.1.2-.3.3-.4.3l-1.4.3H9a48 48 0 0 0-2.7-7.5l-.4-1-.1-.1a69.8 69.8 0 0 0-3.2 1.3.6.6 0 0 1-.4-.3l-.6-1.2v-.5l.4-.3L3 9a31.6 31.6 0 0 0 1.7-.7 19.2 19.2 0 0 0-1.5-2.7.5.5 0 0 1-.1-.4c0-.2.1-.3.3-.3l1.2-.5a.7.7 0 0 1 .5 0c.2 0 .3.2.4.4l.5.8a51.3 51.3 0 0 1 1 1.8A39 39 0 0 1 10.6 6c1-.3 2-.5 2.8-.5a5 5 0 0 1 3.6 1c.9.8 1.3 1.7 1.3 2.8a4 4 0 0 1-1.3 3.1zm12.6 15.3a.6.6 0 0 1-.6.7h-1.5c-.2 0-.4 0-.5-.2a.6.6 0 0 1-.2-.5v-4.3H24l-3 4.4c-.2.4-.5.6-1 .6h-1.9c-.1 0-.2 0-.3-.2v-.4l3.4-4.8a5 5 0 0 1-2.1-1.5c-.5-.7-.8-1.6-.8-2.6 0-2.8 1.8-4.2 5.4-4.2h5c.3 0 .4 0 .6.2l.1.5v12.4z' style='stroke-width:.0938'/%3E%3C/svg%3E");/*    background-position:-24px 0;*/
 }
 .tr-icon-yandex {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 42 42'%3E%3Cg clip-path='url(%23a)'%3E%3Crect width='42' height='42' fill='%232B2B2B' rx='21'/%3E%3Cpath fill='%23FC3F1D' d='M42 42H30.1L12 0h30v42Z'/%3E%3Cpath fill='%232B2B2B' d='M42 42H30.1L12 0h30v42Z'/%3E%3Cpath fill='%23fff' fill-rule='evenodd' d='M35.5 17.7a5 5 0 0 0-2.7-2.7l.3-2.3h-2.3c0 .4 0 1-.2 1.7-1.7-.2-3.7 0-5.6.7l-.4-3.4c6.7-.3 10.7-2 10.8-2l-.8-2s-3.8 1.5-10 1.9v-2h-2.3v2h-.2l-4.3-.1-.4 2.2 4.4.1h.6c0 1.3.2 2.7.5 4.2-3 1.8-5.3 5.1-4 7.8a3.4 3.4 0 0 0 2.7 2l.6.1c1.3 0 2.8-.5 4.1-1.3 1 1.3 1.7 2 1.8 2l1.5-1.5s-.7-.7-1.5-1.9l1-1a15 15 0 0 0 3-5c.5.3 1 .7 1.3 1.3.9 2.2-.4 4.7-1.6 5.8l1.5 1.6c2-1.8 3.4-5.2 2.2-8.2Zm-13.6 6c-.5 0-.8-.3-1-.7-.6-1.3.6-3.3 2.6-4.7a22 22 0 0 0 1.7 4.4c-1.2.8-2.4 1.2-3.3 1Zm5.6-3-.5.6c-.6-1.1-1.1-2.5-1.5-4a10.3 10.3 0 0 1 4.5-.8c-.5 1.4-1.3 2.8-2.5 4.3Z' clip-rule='evenodd'/%3E%3Cpath fill='%23FC3F1D' d='M0 0h11.9L30 42H0V0Z'/%3E%3Cpath fill='url(%23b)' fill-opacity='.4' d='M0 0h11.9L30 42H0V0Z'/%3E%3Cpath fill='%23fff' fill-rule='evenodd' d='M12.8 15.3 5.6 32.1h3l1.7-4.5h7.3l1.8 4.5h3l-7.2-16.8h-2.4Zm1.2 3.5 2.7 6.5h-5.4l2.7-6.5Z' clip-rule='evenodd'/%3E%3C/g%3E%3Cdefs%3E%3ClinearGradient id='b' x1='54.8' x2='10.1' y1='-4.8' y2='33.7' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%23fff'/%3E%3Cstop offset='1' stop-color='%23fff' stop-opacity='0'/%3E%3C/linearGradient%3E%3CclipPath id='a'%3E%3Crect width='42' height='42' fill='%23fff' rx='21'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E") !important;
